metadata-classic/objects/JiraAPI__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>BaseURL__c</fullName>
        <label>BaseURL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GETBaseURL__c</fullName>
        <label>GETBaseURL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Id__c</fullName>
        <label>System_Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>JiraAPI</label>
</CustomObject>